# SimplePress2

./: .gitignore  CMakeLists.txt  README.md
Resources/: Info.plist  icon.icns  libzip.5.4.dylib  libzstd.1.5.2.dylib  res.qrc
examples/Hello_world/: Hello world.spres  HelloWorld.spres  main.xml
include/: Application.hpp  MainWindow.hpp  Presentation.hpp  PresentationSlideView.hpp  PresentationWindow.hpp
src/: Application.cpp  MainWindow.cpp  Presentation.cpp  PresentationSlideView.cpp  PresentationWindow.cpp  main.cpp
